# sc-rapsheet-backend

./: .env  Cargo.toml  README.md  Rocket.toml  docker-compose.yml
migrations/2023-01-25-202726_create_users_table/: up.sql
src/: db.rs  main.rs  routers.rs  schema.rs
src/models/: user.rs
src/repos/: user.rs
src/routers/: service.rs  user.rs
